--- a/platformio.ini
+++ b/platformio.ini
@@ -12,25 +12,29 @@
 platform = espressif32
 board = upesy_wroom
 framework = arduino
+
 build_flags = 
-	-DUSER_SETUP_ID=200
-	-DGC9A01_DRIVER=1
-	-DTFT_SDA_READ=1
-	-DTFT_WIDTH=240
-	-DTFT_HEIGHT=240
-	-DTFT_MOSI=14
-	-DTFT_SCLK=26
-	-DTFT_CS=12
-	-DTFT_DC=27
-	-DTFT_RST=13
-	-DLOAD_GLCD=1
-	-DLOAD_FONT2=1
-	-DLOAD_FONT4=1
-	-DLOAD_FONT6=1
-	-DLOAD_FONT7=1
-	-DLOAD_FONT8=1
-	-DSPI_FREQUENCY=80000000
-	-DSPI_READ_FREQUENCY=20000000
+    -DUSER_SETUP_ID=200
+    -DGC9A01_DRIVER=1
+    -DTFT_SDA_READ=1
+    -DTFT_WIDTH=240
+    -DTFT_HEIGHT=240
+    -DTFT_MOSI=14
+    -DTFT_SCLK=26
+    -DTFT_CS=12
+    -DTFT_DC=27
+    -DTFT_RST=13
+    -DLOAD_GLCD=1
+    -DLOAD_FONT2=1
+    -DLOAD_FONT4=1
+    -DLOAD_FONT6=1
+    -DLOAD_FONT7=1
+    -DLOAD_FONT8=1
+    -DSPI_FREQUENCY=27000000
+    -DSPI_READ_FREQUENCY=20000000
     -DUSER_SETUP_LOADED=1
+
 lib_deps =
     TFT_eSPI
+    Max6675
+    movingAvg
