--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@
 [env:upesy_wroom]
 platform = espressif32
 board = upesy_wroom
+board_build.partitions = partitions.csv
 framework = arduino
 
 build_flags = 
@@ -33,8 +34,9 @@ build_flags =
     -DSPI_FREQUENCY=27000000
     -DSPI_READ_FREQUENCY=20000000
     -DUSER_SETUP_LOADED=1
+    -DSMOOTH_FONT=1
 
 lib_deps =
-    TFT_eSPI
+    TFT_eSPI @ 2.5.43
     Max6675
     movingAvg
