WiP Use MAX31856 instead of MAX6675

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = upesy_wroom
 board_build.partitions = partitions.csv
 framework = arduino
+upload_speed = 115200
 
 build_flags = 
     -DUSER_SETUP_ID=200
@@ -31,13 +32,13 @@ build_flags =
     -DLOAD_FONT6=1
     -DLOAD_FONT7=1
     -DLOAD_FONT8=1
-    -DSPI_FREQUENCY=80000000
+    -DSPI_FREQUENCY=60000000
     -DSPI_READ_FREQUENCY=20000000
     -DUSER_SETUP_LOADED=1
     -DSMOOTH_FONT=1
 
 lib_deps =
-    TFT_eSPI @ 2.5.43
-    Max6675
-    movingAvg
+    TFT_eSPI@^2.5.43
+    adafruit/Adafruit MAX31856 library@^1.2.7
+    pilotak/MovingAverageFloat@^1.0.1
     Pid
