--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,9 @@ build_flags =
     -DSPI_READ_FREQUENCY=20000000
     -DUSER_SETUP_LOADED=1
     -DSMOOTH_FONT=1
+    -DPIN_ZEROCROSS=18
+    -DPIN_TRIAC=16
+    -DPIN_HEATING=17
 
 lib_deps =
     TFT_eSPI@^2.5.43
