--- a/platformio.ini
+++ b/platformio.ini
@@ -38,7 +38,14 @@ build_flags =
     -DSMOOTH_FONT=1
     -DPIN_ZEROCROSS=18
     -DPIN_TRIAC=16
-    -DPIN_HEATING=17
+    -DPIN_VALVE=17
+    -DPIN_MAX31856_SELECT=32
+    -DPIN_MAX31856_MISO=35
+    -DPIN_MAX31856_MOSI=25
+    -DPIN_MAX31856_CLOCK=33
+    -DPIN_HEATING=4
+    -DPIN_INFUSE_SWITCH=23
+    -DPIN_STEAM_SWITCH=19   
 
 lib_deps =
     TFT_eSPI@^2.5.43
