--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = upesy_wroom
 board_build.partitions = partitions.csv
 framework = arduino
-upload_speed = 115200
+#upload_speed = 115200
 
 build_flags = 
     -DUSER_SETUP_ID=200
@@ -39,16 +39,17 @@ build_flags =
     -DPIN_ZEROCROSS=18
     -DPIN_TRIAC=16
     -DPIN_VALVE=17
-    -DPIN_MAX31856_SELECT=32
-    -DPIN_MAX31856_MISO=35
-    -DPIN_MAX31856_MOSI=25
-    -DPIN_MAX31856_CLOCK=33
+    -DPIN_MAX31865_SELECT=32
+    -DPIN_MAX31865_MISO=35
+    -DPIN_MAX31865_MOSI=25
+    -DPIN_MAX31865_CLOCK=33
     -DPIN_HEATING=4
     -DPIN_INFUSE_SWITCH=23
     -DPIN_STEAM_SWITCH=19   
 
 lib_deps =
     TFT_eSPI@^2.5.43
-    adafruit/Adafruit MAX31856 library@^1.2.7
+    adafruit/Adafruit MAX31865 library@^1.6.2
     alexandrehiroyuki/DataTome@^1.6.3
     Pid
+    https://github.com/jackw01/arduino-pid-autotuner.git
