--- a/platformio.ini
+++ b/platformio.ini
@@ -15,26 +15,13 @@ board_build.partitions = partitions.csv
 framework = arduino
 
 build_flags = 
-    -DUSER_SETUP_ID=200
-    -DGC9A01_DRIVER=1
-    -DTFT_SDA_READ=1
-    -DTFT_WIDTH=240
-    -DTFT_HEIGHT=240
     -DTFT_MOSI=14
     -DTFT_SCLK=26
     -DTFT_CS=12
     -DTFT_DC=27
     -DTFT_RST=13
-    -DLOAD_GLCD=1
-    -DLOAD_FONT2=1
-    -DLOAD_FONT4=1
-    -DLOAD_FONT6=1
-    -DLOAD_FONT7=1
-    -DLOAD_FONT8=1
     -DSPI_FREQUENCY=60000000
     -DSPI_READ_FREQUENCY=20000000
-    -DUSER_SETUP_LOADED=1
-    -DSMOOTH_FONT=1
     -DPIN_ZEROCROSS=18
     -DPIN_TRIAC=17
     -DPIN_VALVE=16
@@ -44,10 +31,21 @@ build_flags =
     -DPIN_MAX31865_CLOCK=33
     -DPIN_HEATING=4
     -DPIN_INFUSE_SWITCH=34
-    -DPIN_STEAM_SWITCH=23  
+    -DPIN_STEAM_SWITCH=23
+    -DLV_CONF_SKIP
+    -DLV_TICK_CUSTOM
+    '-D LV_TICK_CUSTOM_INCLUDE="Arduino.h"'
+    '-D LV_TICK_CUSTOM_SYS_TIME_EXPR=(millis())' 
+    -DLV_FONT_MONTSERRAT_48
+    -DLV_SPRINTF_USE_FLOAT
+    -DLV_THEME_DEFAULT_DARK
+    -DLV_USE_FS_STDIO
+    "-D LV_FS_STDIO_LETTER='A'"
+
 
 lib_deps =
-    TFT_eSPI@^2.5.43
+    lovyan03/LovyanGFX@^0.4.14
+    lvgl/lvgl@^8.1.0
     https://github.com/schorschbla/Adafruit_MAX31865#feature-read-cont
     alexandrehiroyuki/DataTome@^1.6.3
     Pid
