--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,8 @@
 [env:upesy_wroom]
 platform = espressif32
 board = upesy_wroom
-board_build.partitions = partitions.csv
+#board_build.partitions = partitions.csv
+board_build.partitions = huge_app.csv
 framework = arduino
 
 build_flags = 
