WiP bluetooth pairing

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:upesy_wroom]
-platform = espressif32
+platform = espressif32 @ ^6.9.0
 board = upesy_wroom
 #board_build.partitions = partitions.csv
 board_build.partitions = huge_app.csv
@@ -38,10 +38,11 @@ build_flags =
     '-D LV_TICK_CUSTOM_INCLUDE="Arduino.h"'
     '-D LV_TICK_CUSTOM_SYS_TIME_EXPR=(millis())' 
     -DLV_FONT_MONTSERRAT_48
+    -DLV_FONT_MONTSERRAT_36
+    -DLV_FONT_MONTSERRAT_20
+    -DLV_LVGL_H_INCLUDE_SIMPLE
     -DLV_SPRINTF_USE_FLOAT
     -DLV_THEME_DEFAULT_DARK
-    -DLV_USE_FS_STDIO
-    "-D LV_FS_STDIO_LETTER='A'"
 
 
 lib_deps =
