Refacotred constant names

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,13 +24,13 @@ build_flags =
     -DSPI_FREQUENCY=60000000
     -DSPI_READ_FREQUENCY=20000000
     -DPIN_ZEROCROSS=18
-    -DPIN_TRIAC=17
-    -DPIN_VALVE=16
+    -DPIN_PUMP_POWER=17
+    -DPIN_VALVE_POWER=16
     -DPIN_MAX31865_SELECT=32
     -DPIN_MAX31865_MISO=35
     -DPIN_MAX31865_MOSI=25
     -DPIN_MAX31865_CLOCK=33
-    -DPIN_HEATING=4
+    -DPIN_HEATING_POWER=4
     -DPIN_INFUSE_SWITCH=34
     -DPIN_STEAM_SWITCH=23
     -DLV_CONF_SKIP
