Use esp32 pulse counter for flow detection

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,6 +33,7 @@ build_flags =
     -DPIN_HEATING_POWER=4
     -DPIN_INFUSE_SWITCH=34
     -DPIN_STEAM_SWITCH=23
+    -DPIN_FLOW_METER=15
     -DLV_CONF_SKIP
     -DLV_TICK_CUSTOM
     '-D LV_TICK_CUSTOM_INCLUDE="Arduino.h"'
