Removed autopid code, refactored build macro names

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,29 +11,28 @@
 [env:upesy_wroom]
 platform = espressif32 @ ^6.9.0
 board = upesy_wroom
-#board_build.partitions = partitions.csv
 board_build.partitions = huge_app.csv
 framework = arduino
 
 build_flags = 
-    -DTFT_MOSI=14
-    -DTFT_SCLK=26
-    -DTFT_CS=12
-    -DTFT_DC=27
-    -DTFT_RST=13
-    -DSPI_FREQUENCY=60000000
-    -DSPI_READ_FREQUENCY=20000000
-    -DPIN_ZEROCROSS=18
-    -DPIN_PUMP_POWER=17
-    -DPIN_VALVE_POWER=16
+    -DPIN_GC9A01_MOSI=14
+    -DPIN_GC9A01_SCLK=26
+    -DPIN_GC9A01_CS=12
+    -DPIN_GC9A01_DC=27
+    -DPIN_GC9A01_RST=13
+    -DPIN_AC_ZEROCROSS=18
+    -DPIN_PUMP_AC=17
+    -DPIN_VALVE_AC=16
     -DPIN_MAX31865_SELECT=32
     -DPIN_MAX31865_MISO=35
     -DPIN_MAX31865_MOSI=25
     -DPIN_MAX31865_CLOCK=33
-    -DPIN_HEATING_POWER=4
+    -DPIN_HEATING_AC=4
     -DPIN_INFUSE_SWITCH=34
     -DPIN_STEAM_SWITCH=23
     -DPIN_FLOW_METER=15
+
+    -DGC9A01_SPI_WRITE_FREQUENCY=70000000
     -DLV_CONF_SKIP
     -DLV_TICK_CUSTOM
     '-D LV_TICK_CUSTOM_INCLUDE="Arduino.h"'
@@ -52,4 +51,3 @@ lib_deps =
     https://github.com/schorschbla/Adafruit_MAX31865#feature-read-cont
     alexandrehiroyuki/DataTome@^1.6.3
     Pid
-    https://github.com/jackw01/arduino-pid-autotuner.git
