Proper LVGL configuration via lv_config.h

--- a/platformio.ini
+++ b/platformio.ini
@@ -33,17 +33,9 @@ build_flags =
     -DPIN_FLOW_METER=15
 
     -DGC9A01_SPI_WRITE_FREQUENCY=70000000
-    -DLV_CONF_SKIP
-    -DLV_TICK_CUSTOM
-    '-D LV_TICK_CUSTOM_INCLUDE="Arduino.h"'
-    '-D LV_TICK_CUSTOM_SYS_TIME_EXPR=(millis())' 
-    -DLV_FONT_MONTSERRAT_48
-    -DLV_FONT_MONTSERRAT_36
-    -DLV_FONT_MONTSERRAT_20
-    -DLV_LVGL_H_INCLUDE_SIMPLE
-    -DLV_SPRINTF_USE_FLOAT
-    -DLV_THEME_DEFAULT_DARK
 
+    -DLV_CONF_PATH=../../../../include/lv_conf.h
+    -DLV_LVGL_H_INCLUDE_SIMPLE
 
 lib_deps =
     lovyan03/LovyanGFX@^0.4.14
