--- a/platformio.ini
+++ b/platformio.ini
@@ -34,7 +34,7 @@ build_flags =
 
     -DGC9A01_SPI_WRITE_FREQUENCY=70000000
 
-    -DLV_CONF_PATH=../../../../include/lv_conf.h
+    -Iinclude
     -DLV_LVGL_H_INCLUDE_SIMPLE
 
 lib_deps =
